http://blog.csdn.net/a649518776/article/details/6724121
Unix NetWork Programming——环境搭建（解决unp.h等源码编译问题）

--- a/configure.in
+++ b/configure.in
@@ -591,7 +591,22 @@ dnl
 dnl If the system has a getaddrinfo implementation, then
 dnl there should be nothing here.
 if test "$ac_cv_func_getaddrinfo" = no ; then
-LIBGAI_OBJS="getaddrinfo.o getnameinfo.o freeaddrinfo.o gai_strerror.o"
+#LIBGAI_OBJS="getaddrinfo.o getnameinfo.o freeaddrinfo.o gai_strerror.o"
+
+LIBGAI_OBJS=
+if test "$ac_cv_func_getaddrinfo" = no ; then
+	LIBGAI_OBJS="$LIBGAI_OBJS getaddrinfo.o"
+fi
+if test "$ac_cv_func_getnameinfo" = no ; then
+	LIBGAI_OBJS="$LIBGAI_OBJS getnameinfo.o"
+fi
+if test "$ac_cv_func_freeaddrinfo" = no ; then
+	LIBGAI_OBJS="$LIBGAI_OBJS freeaddrinfo.o"
+fi
+if test "$ac_cv_func_gai_strerror" = no ; then
+	LIBGAI_OBJS="$LIBGAI_OBJS gai_strerror.o"
+fi
+
 LIBGAI_OBJS="$LIBGAI_OBJS ga_aistruct.o ga_clone.o ga_echeck.o ga_nsearch.o"
 LIBGAI_OBJS="$LIBGAI_OBJS ga_port.o ga_serv.o ga_unix.o gn_ipv46.o"
 else
